; ModuleID = '/home/carl/AnghaBench/linux/drivers/watchdog/extr_ath79_wdt.c_ath79_wdt_release.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/watchdog/extr_ath79_wdt.c_ath79_wdt_release.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@WDT_FLAGS_EXPECT_CLOSE = common dso_local global i32 0, align 4
@wdt_flags = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [59 x i8] c"device closed unexpectedly, watchdog timer will not stop!\0A\00", align 1
@WDT_FLAGS_BUSY = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @ath79_wdt_release to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ath79_wdt_release(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca %struct.inode*, align 8
  %4 = alloca %struct.file*, align 8
  store %struct.inode* %0, %struct.inode** %3, align 8
  store %struct.file* %1, %struct.file** %4, align 8
  %5 = load i32, i32* @WDT_FLAGS_EXPECT_CLOSE, align 4
  %6 = call i64 @test_bit(i32 %5, i32* @wdt_flags)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %10

8:                                                ; preds = %2
  %9 = call i32 (...) @ath79_wdt_disable()
  br label %13

10:                                               ; preds = %2
  %11 = call i32 @pr_crit(i8* getelementptr inbounds ([59 x i8], [59 x i8]* @.str, i64 0, i64 0))
  %12 = call i32 (...) @ath79_wdt_keepalive()
  br label %13

13:                                               ; preds = %10, %8
  %14 = load i32, i32* @WDT_FLAGS_BUSY, align 4
  %15 = call i32 @clear_bit(i32 %14, i32* @wdt_flags)
  %16 = load i32, i32* @WDT_FLAGS_EXPECT_CLOSE, align 4
  %17 = call i32 @clear_bit(i32 %16, i32* @wdt_flags)
  ret i32 0
}

declare dso_local i64 @test_bit(i32, i32*) #1

declare dso_local i32 @ath79_wdt_disable(...) #1

declare dso_local i32 @pr_crit(i8*) #1

declare dso_local i32 @ath79_wdt_keepalive(...) #1

declare dso_local i32 @clear_bit(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
